--- a/app/src/theme/style/oblike.scss
+++ b/app/src/theme/style/oblike.scss
@@ -1,9 +1,9 @@
 
 .razsiri {
-  width: 100%;
+  width: 100% !important;
 }
 
 .razsiri-gumb {
   width: 100%;
-  border-radius: 0
+  border-radius: 0 !important;
 }
