--- a/app/src/app/components/nav-gumb/nav-gumb.component.html
+++ b/app/src/app/components/nav-gumb/nav-gumb.component.html
@@ -1,6 +1,6 @@
 <div class="row text-center">
   <div class="col-12">
-    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+    <button mat-fab color="primary">
       <mat-icon>{{ikona}}</mat-icon>
     </button>
   </div>
