--- a/app/src/app/components/nav-bar/nav-bar.component.html
+++ b/app/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
-  <div class="row">
-    <div *ngFor="let navGumb of navGumbi" class="col">
-      <app-nav-gumb ikona="{{navGumb.ikona}}" tekst="{{navGumb.tekst}}"/>
-    </div>
+<div class="row">
+  <div *ngFor="let navGumb of navGumbi" class="col">
+    <app-nav-gumb [route]="navGumb.route" [ikona]="navGumb.ikona" [tekst]="navGumb.tekst"/>
   </div>
+</div>
