--- a/app/src/app/components/nav-gumb/nav-gumb.component.html
+++ b/app/src/app/components/nav-gumb/nav-gumb.component.html
@@ -1,10 +1,12 @@
 <div class="row text-center">
-  <div class="col-12">
-    <button mat-fab color="primary">
-      <mat-icon>{{ikona}}</mat-icon>
-    </button>
-  </div>
-  <div class="col-12">
-    <a>{{tekst}}</a>
-  </div>
+  <a [routerLink]="route">
+    <div class="col-12">
+      <button mat-fab color="primary">
+        <mat-icon>{{ikona}}</mat-icon>
+      </button>
+    </div>
+    <div class="col-12">
+      <p>{{tekst}}</p>
+    </div>
+  </a>
 </div>
