--- a/app/src/app/components/nav-stran/nav-stran.component.html
+++ b/app/src/app/components/nav-stran/nav-stran.component.html
@@ -1,6 +1,8 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center m-3">
   <div class="col-12 col-sm-10" style="max-width: 800px">
     <app-nav-bar [navGumbi]="navGumbi"/>
-    <ng-content/>
+    <div class="shadow">
+      <ng-content/>
+    </div>
   </div>
 </div>
