--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -22,9 +22,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "bootstrap/scss/utilities/api";
 
 @import "styles/reset";
-
-div {
-  border: black;
-  border-style: solid;
-  border-width: 1px;
-}
+//div {
+//  border: black;
+//  border-style: solid;
+//  border-width: 1px;
+//}
