--- a/app/src/app/routes/public/kontakt/kontakt.component.html
+++ b/app/src/app/routes/public/kontakt/kontakt.component.html
@@ -1,1 +1,16 @@
-<p>kontakt works!</p>
+<div class="row p-4">
+  <div class="col-sm-12 col-xl-4">
+    <app-input-oseba/>
+  </div>
+  <div class="col-sm-6 col-xl-4">
+    <app-input-email/>
+  </div>
+  <div class="col-sm-6 col-xl-4">
+    <app-input-telefon/>
+  </div>
+
+  <div class="col-12">
+    <app-input-msg/>
+    <button mat-raised-button routerLink="/koledar" color="primary" class="w-100">Pošlji</button>
+  </div>
+</div>
