--- a/app/src/app/routes/public/koledar/koledar.component.html
+++ b/app/src/app/routes/public/koledar/koledar.component.html
@@ -1,1 +1,6 @@
-<p>koledar works!</p>
+<iframe
+  height="1000"
+  src="https://app.acuityscheduling.com/schedule.php?owner=17096971&calendarID=2725528"
+  title="Schedule Appointment"
+  width="100%">
+</iframe>
