--- a/app/src/app/components/alert/alert.component.html
+++ b/app/src/app/components/alert/alert.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
-<div mat-dialog-content>This dialog showcases the title, close, content and actions elements.</div>
+<h1 mat-dialog-title>{{data.vsebina}}</h1>
+<div mat-dialog-content>{{data.vsebina}}</div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
 </div>
