--- a/app/src/app/routes/ucenec/profil/profil.component.html
+++ b/app/src/app/routes/ucenec/profil/profil.component.html
@@ -1,1 +1,28 @@
-<p>profil works!</p>
+<table mat-table [dataSource]="testi" class="mat-elevation-z8">
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="naslov">
+    <th mat-header-cell *matHeaderCellDef> Naslov</th>
+    <td mat-cell *matCellDef="let test"> {{test.naslov}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="opravljeno">
+    <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
+    <td mat-cell *matCellDef="let test"> {{test.opravljeno | percent}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="datum">
+    <th mat-header-cell *matHeaderCellDef> Deadline </th>
+    <td mat-cell *matCellDef="let test"> {{test.datum | date}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="oddaljenost">
+    <th mat-header-cell *matHeaderCellDef> Ostalo </th>
+    <td mat-cell *matCellDef="let test"> {{test.datum | DateOddaljenost}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
