--- a/app/src/app/routes/ucenec/testi/testi.component.html
+++ b/app/src/app/routes/ucenec/testi/testi.component.html
@@ -24,5 +24,5 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let test; columns: displayedColumns;" routerLink="/ucenec/testi/{{test.id}}"></tr>
 </table>
