Working minimal version.

--- a/app/src/app/components/nav-stran/nav-stran.component.html
+++ b/app/src/app/components/nav-stran/nav-stran.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center m-3">
-  <div class="col-12 col-sm-10" style="max-width: 800px">
+  <div class="col-12" style="max-width: 800px">
     <app-nav-bar [navGumbi]="navGumbi"/>
     <div class="shadow">
       <ng-content/>
