--- a/app/src/app/routes/public/prijava/prijava.component.html
+++ b/app/src/app/routes/public/prijava/prijava.component.html
@@ -1,10 +1,10 @@
 <div class="row p-4">
 
-  <div class="col-sm-6 col-xl-12">
+  <div class="col-sm-6">
     <app-input-oseba label="Vnesi uporabniško ime..."/>
   </div>
 
-  <div class="col-sm-6 col-xl-12">
+  <div class="col-sm-6">
     <app-input-geslo/>
   </div>
 
