--- a/app/src/app/routes/ucenec/naloga/naloga.component.html
+++ b/app/src/app/routes/ucenec/naloga/naloga.component.html
@@ -14,35 +14,6 @@
   </mat-tab>
 
   <mat-tab label="Zgodovina">
-
-
-    <table mat-table [dataSource]="audits" class="mat-elevation-z8 text-center">
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="opis">
-        <th mat-header-cell *matHeaderCellDef> Opis</th>
-        <td mat-cell *matCellDef="let audit"> {{audit.opis}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="trajanje">
-        <th mat-header-cell *matHeaderCellDef> Trajanje</th>
-        <td mat-cell *matCellDef="let audit"> {{audit.trajanje | Trajanje}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="ustvarjeno">
-        <th mat-header-cell *matHeaderCellDef> Datum</th>
-        <td mat-cell *matCellDef="let audit"> {{audit.ustvarjeno | date}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="pred">
-        <th mat-header-cell *matHeaderCellDef> Pred</th>
-        <td mat-cell *matCellDef="let audit"> {{audit.ustvarjeno | DateOddaljenost }} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let audit; columns: displayedColumns;"></tr>
-    </table>
-
-
+    <app-audits-tabela [audits]="audits"/>
   </mat-tab>
 </mat-tab-group>
