Adding global styles.scss

--- a/app/src/app/components/input-oseba/input-oseba.component.html
+++ b/app/src/app/components/input-oseba/input-oseba.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="w-100">
+<mat-form-field class="w-100">
   <mat-label>{{label}}</mat-label>
   <input matInput [formControl]="oseba" required>
   <mat-icon matPrefix>person</mat-icon>
