--- a/app/src/app/components/input-email/input-email.component.html
+++ b/app/src/app/components/input-email/input-email.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="w-100">
+<mat-form-field class="w-100">
   <mat-label>Enter your email</mat-label>
   <input matInput [formControl]="email" required>
   <mat-icon matPrefix>email</mat-icon>
