--- a/app/src/app/components/input-msg/input-msg.component.html
+++ b/app/src/app/components/input-msg/input-msg.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="w-100" style="min-height: 150px">
+<mat-form-field class="w-100" style="min-height: 150px">
   <mat-label>Sporocilo</mat-label>
   <textarea matInput></textarea>
   <mat-error *ngIf="sporocilo.invalid">{{getErrorMessage()}}</mat-error>
