--- a/app/src/app/components/input-phone/input-telefon.component.html
+++ b/app/src/app/components/input-phone/input-telefon.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="w-100">
+<mat-form-field class="w-100">
   <mat-label>Enter your phone</mat-label>
   <mat-icon matPrefix>phone</mat-icon>
   <input matInput [formControl]="telefon" required>
