Adding global styles.scss

--- a/app/src/app/routes/public/prijava/prijava.component.html
+++ b/app/src/app/routes/public/prijava/prijava.component.html
@@ -1,7 +1,7 @@
 <div class="row p-4">
 
   <div class="col-sm-6">
-    <app-input-oseba label="Vnesi uporabniško ime..."/>
+    <app-input-oseba label="Uporabniško ime"/>
   </div>
 
   <div class="col-sm-6">
