--- a/app/src/app/components/input-email/input-email.component.html
+++ b/app/src/app/components/input-email/input-email.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="w-100">
-  <mat-label>Enter your email</mat-label>
+  <mat-label>Email</mat-label>
   <input matInput [formControl]="email" required>
   <mat-icon matPrefix>email</mat-icon>
   <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
