--- a/app/src/app/components/input-geslo/input-geslo.component.html
+++ b/app/src/app/components/input-geslo/input-geslo.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="w-100">
-  <mat-label>Enter your password</mat-label>
+  <mat-label>Geslo</mat-label>
   <input matInput [formControl]="geslo" required>
   <mat-icon matPrefix>lock</mat-icon>
   <mat-error *ngIf="geslo.invalid">{{getErrorMessage()}}</mat-error>
