--- a/app/src/app/components/input-phone/input-telefon.component.html
+++ b/app/src/app/components/input-phone/input-telefon.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="w-100">
-  <mat-label>Enter your phone</mat-label>
+  <mat-label>Telefon</mat-label>
   <mat-icon matPrefix>phone</mat-icon>
   <input matInput [formControl]="telefon" required>
   <mat-error *ngIf="telefon.invalid">{{getErrorMessage()}}</mat-error>
