--- a/app/src/app/components/nav-stran/nav-stran.component.html
+++ b/app/src/app/components/nav-stran/nav-stran.component.html
@@ -1,7 +1,7 @@
-<div class="row justify-content-center m-3">
-  <div class="col-12" style="max-width: 800px">
+<div class="row justify-content-center">
+  <div class="col-12 mt-3" style="max-width: 800px">
     <app-nav-bar [navGumbi]="navGumbi"/>
-    <div class="shadow">
+    <div class="shadow-lg">
       <ng-content/>
     </div>
   </div>
