--- a/app/src/app/routes/public/index/public.component.html
+++ b/app/src/app/routes/public/index/public.component.html
@@ -1,23 +1,23 @@
-<div class="text-center">
+<div class="text-center pt-3">
 
   <h1>Uroš Jarc</h1>
-  <h1>Inštruktor programiranja, fizike, matematike</h1>
+  <h2>Inštruktor programiranja, fizike, matematike</h2>
 
-  <div class="row justify-content-center">
-    <div *ngFor="let kontakt of kontakti" class="col-3">
-      <button [routerLink]="kontakt.route" mat-button>
+  <div class="row justify-content-center g-3">
+    <div *ngFor="let kontakt of kontakti" class="col-sm-4">
+      <button mat-stroked-button [routerLink]="kontakt.route" mat-button>
         <mat-icon>{{kontakt.ikona}}</mat-icon>
         {{kontakt.tekst}}
       </button>
     </div>
   </div>
 
-  <button mat-raised-button routerLink="/koledar" color="primary" class="w-100 rounded-0">Naroči inštrukcije</button>
+  <button mat-raised-button routerLink="/koledar" color="primary" class="w-100 rounded-0 mt-3">Naroči inštrukcije</button>
 
   <mat-accordion>
-    <mat-expansion-panel hideToggle *ngFor="let info of infos">
-      <mat-expansion-panel-header>
-        <mat-panel-description><h2 class="w-100">{{info.naslov}}</h2></mat-panel-description>
+    <mat-expansion-panel hideToggle *ngFor="let info of infos" style="border-radius: 0 !important;">
+      <mat-expansion-panel-header class="m-0 p-0">
+        <mat-panel-description class="m-0 p-0"><b class="w-100 m-0 p-0">{{info.naslov}}</b></mat-panel-description>
       </mat-expansion-panel-header>
       {{info.vsebina}}
     </mat-expansion-panel>
