--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,10 +1,3 @@
-@import "styles/theme";
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-@import "styles/variables";
-
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/variables-dark";
@@ -22,3 +15,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "bootstrap/scss/utilities/api";
 
 @import "styles/reset";
+
+@import "styles/theme";
+@import "styles/typography";
+@import "styles/custom";
