--- a/app/src/app/components/nav-stran/nav-stran.component.html
+++ b/app/src/app/components/nav-stran/nav-stran.component.html
@@ -1,8 +1,10 @@
-<div class="row justify-content-center">
-  <div class="col-12 mt-3" style="max-width: 800px">
-    <app-nav-bar [navGumbi]="navGumbi"/>
-    <div class="shadow-lg">
-      <ng-content/>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 mt-3" style="max-width: 800px">
+      <app-nav-bar [navGumbi]="navGumbi"/>
+      <div class="shadow-lg">
+        <ng-content/>
+      </div>
     </div>
   </div>
 </div>
