--- a/app/src/styles/custom.scss
+++ b/app/src/styles/custom.scss
@@ -1,9 +1,10 @@
 html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: "JetBrains Mono Bold", monospace;
 }
 
