--- a/app/src/app/components/nav-gumb/nav-gumb.component.html
+++ b/app/src/app/components/nav-gumb/nav-gumb.component.html
@@ -1,7 +1,7 @@
 <div class="row text-center">
   <a [routerLink]="route">
     <div class="col-12">
-      <button mat-fab color="primary">
+      <button mat-fab [style]="style" color="primary">
         <mat-icon>{{ikona}}</mat-icon>
       </button>
     </div>
