--- a/app/src/app/components/nav-stran/nav-stran.component.html
+++ b/app/src/app/components/nav-stran/nav-stran.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-12 mt-3" style="max-width: 800px">
       <app-nav-bar [navGumbi]="navGumbi"/>
-      <div class="shadow-lg">
+      <div class="shadow-lg" style="padding: 0 1px">
         <ng-content/>
       </div>
     </div>
