--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -18,4 +18,5 @@
 
 @import "styles/theme";
 @import "styles/typography";
-@import "styles/custom";
+@import "styles/dom";
+@import "styles/animations.scss";
