--- a/app/src/app/routes/ucenec/testi/ucenec-testi.component.html
+++ b/app/src/app/routes/ucenec/testi/ucenec-testi.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="testi" class="mat-elevation-z8">
+<table mat-table [dataSource]="testi">
 
   <!-- Name Column -->
   <ng-container matColumnDef="naslov">
@@ -14,15 +14,15 @@
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef> Deadline </th>
+    <th mat-header-cell *matHeaderCellDef> Deadline</th>
     <td mat-cell *matCellDef="let test"> {{test.datum | date}} </td>
   </ng-container>
 
   <ng-container matColumnDef="oddaljenost">
-    <th mat-header-cell *matHeaderCellDef> Ostalo </th>
+    <th mat-header-cell *matHeaderCellDef> Ostalo</th>
     <td mat-cell *matCellDef="let test"> {{test.datum | DateOddaljenost}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let test; columns: displayedColumns;" routerLink="/ucenec/testi/{{test.id}}"></tr>
+  <tr class="{{test.datum | DateOddaljenostClass}}" mat-row *matRowDef="let test; columns: displayedColumns;" routerLink="/ucenec/testi/{{test.id}}"></tr>
 </table>
