--- a/app/src/app/routes/public/public.component.html
+++ b/app/src/app/routes/public/public.component.html
@@ -1,3 +1,3 @@
 <app-nav-stran [navGumbi]="navGumbi">
-  <router-outlet routerLinkActive="/ucenec/index"></router-outlet>
+  <router-outlet></router-outlet>
 </app-nav-stran>
