--- a/app/src/app/routes/ucenec/testi/ucenec-testi.component.html
+++ b/app/src/app/routes/ucenec/testi/ucenec-testi.component.html
@@ -1,28 +1,1 @@
-<table mat-table [dataSource]="testi">
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="naslov">
-    <th mat-header-cell *matHeaderCellDef> Naslov</th>
-    <td mat-cell *matCellDef="let test"> {{test.naslov}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="opravljeno">
-    <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
-    <td mat-cell *matCellDef="let test"> {{test.opravljeno | percent}} </td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef> Deadline</th>
-    <td mat-cell *matCellDef="let test"> {{test.datum | date}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="oddaljenost">
-    <th mat-header-cell *matHeaderCellDef> Ostalo</th>
-    <td mat-cell *matCellDef="let test"> {{test.datum | DateOddaljenost}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr class="{{test.datum | DateOddaljenostClass}}" mat-row *matRowDef="let test; columns: displayedColumns;" routerLink="/ucenec/testi/{{test.id}}"></tr>
-</table>
+<app-table-testi [testi]="testi"/>
