--- a/app/src/styles/animations.scss
+++ b/app/src/styles/animations.scss
@@ -1,22 +1,23 @@
 @keyframes danger-pulse {
   0% {
     background-color: #ff0000;
-    color: white !important;
+    color: white;
+  }
+  50%{
+    color: white;
   }
   100% {
-    background-color: #ffc8c8;
-    color: black !important;
+    background-color: #ffefef;
+    color: black;
   }
 }
 
 @keyframes warn-pulse {
   0% {
     background-color: #ffa500;
-    color: white !important;
   }
   100% {
-    background-color: #ffe6c3;
-    color: black !important;
+    background-color: #fff8ee;
   }
 }
 
@@ -24,6 +25,7 @@
   background-color: red;
   animation-name: danger-pulse;
   animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0,0,1,.5);
   animation-iteration-count: infinite;
 }
 
@@ -31,5 +33,6 @@
   background-color: orange;
   animation-name: warn-pulse;
   animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0,0,1,.5);
   animation-iteration-count: infinite;
 }
