Finish for today.

--- a/app/src/app/routes/public/koledar/public-koledar.component.html
+++ b/app/src/app/routes/public/koledar/public-koledar.component.html
@@ -2,5 +2,6 @@
   height="800"
   src="https://app.acuityscheduling.com/schedule.php?owner=17096971&calendarID=2725528"
   title="Schedule Appointment"
+  allowtransparency="false"
   width="100%">
 </iframe>
