--- a/app/src/app/routes/public/prijava/public-prijava.component.html
+++ b/app/src/app/routes/public/prijava/public-prijava.component.html
@@ -9,6 +9,6 @@
   </div>
 
   <div class="col-12">
-    <button mat-raised-button (click)="login()" color="primary" class="w-100">Prijava</button>
+    <app-btn-loading [loading]="loading" [login]="login" vsebina="Prijava"/>
   </div>
 </div>
