--- a/app/src/app/routes/public/koledar/public-koledar.component.html
+++ b/app/src/app/routes/public/koledar/public-koledar.component.html
@@ -1,7 +1,8 @@
+<app-loading [loading]="loading"/>
 <iframe
   height="800"
   src="https://app.acuityscheduling.com/schedule.php?owner=17096971&calendarID=2725528"
   title="Schedule Appointment"
-  allowtransparency="false"
+  (load)="loaded()"
   width="100%">
 </iframe>
