--- a/app/src/app/routes/public/kontakt/public-kontakt.component.html
+++ b/app/src/app/routes/public/kontakt/public-kontakt.component.html
@@ -1,16 +1,18 @@
+<app-loading [loading]="loading"/>
+<form [formGroup]="formGroup" (ngSubmit)="poslji()">
 <div class="row p-4">
-  <div class="col-sm-12 col-xl-4">
+  <div class="col-sm-12">
     <app-input-oseba [oseba]="oseba"/>
   </div>
-  <div class="col-sm-6 col-xl-4">
+  <div class="col-sm-12 col-md-6">
     <app-input-email [email]="email"/>
   </div>
-  <div class="col-sm-6 col-xl-4">
+  <div class="col-sm-12 col-md-6">
     <app-input-telefon [telefon]="telefon"/>
   </div>
 
   <div class="col-12">
     <app-input-msg [sporocilo]="sporocilo"/>
-    <button mat-raised-button routerLink="/koledar" color="primary" class="w-100">Pošlji</button>
+    <button mat-raised-button (click)="poslji()" color="primary" class="w-100">Pošlji</button>
   </div>
 </div>
