--- a/app/src/app/components/input-phone/input-telefon.component.html
+++ b/app/src/app/components/input-phone/input-telefon.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="w-100">
   <mat-label>Telefon</mat-label>
   <mat-icon matPrefix>phone</mat-icon>
-  <input matInput [formControl]="telefon" required>
-  <mat-error *ngIf="telefon.invalid">{{getErrorMessage()}}</mat-error>
+  <input matInput [formControl]="formControl" required>
+  <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
 </mat-form-field>
