Fixing api service.

--- a/app/src/app/routes/ucenec/naloga/ucenec-naloga.component.html
+++ b/app/src/app/routes/ucenec/naloga/ucenec-naloga.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-center py-2 m-0"
-    style="{{(status?.tip || Status.tip.NEZACETO) | StatusStyle}}">{{sekunde | Stoparica}}</h1>
+    style="{{(status?.tip || 'NEZACETO') | StatusStyle}}">{{sekunde | Stoparica}}</h1>
 <mat-divider/>
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
   <mat-tab label="Naloga">
