--- a/app/src/app/routes/ucenec/test/ucenec-test.component.html
+++ b/app/src/app/routes/ucenec/test/ucenec-test.component.html
@@ -32,7 +32,7 @@
     <div class="row row-cols-auto g-1 justify-content-center">
       <div class="col" *ngFor="let naloga of item.value">
         <button mat-raised-button
-                style="{{(naloga.status?.tip || Status.tip.NEZACETO) | StatusStyle}}"
+                style="{{(naloga.status?.tip || 'NEZACETO') | StatusStyle}}"
                 routerLink="/ucenec/testi/{{test_id}}/naloge/{{naloga.id}}">{{naloga.stevilka}}</button>
       </div>
     </div>
