Kontakt is finished.

--- a/app/src/app/components/alert/alert.component.html
+++ b/app/src/app/components/alert/alert.component.html
@@ -3,7 +3,7 @@
     {{data.naslov}}
     <mat-divider/>
   </h1>
-  <div mat-dialog-content>{{data.vsebina}}</div>
+  <div mat-dialog-content [innerHTML]="data.vsebina"></div>
   <div mat-dialog-actions>
     <button apperence="fill" [color]="data.color" class="w-100" mat-raised-button mat-dialog-close>Zapri</button>
   </div>
