Creating auth service, guards.

--- a/app/src/app/components/nav-bar/nav-bar.component.html
+++ b/app/src/app/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let navGumb of navGumbi" class="col">
     <app-nav-gumb
       [style]="navGumb.style"
-      [route]="navGumb.route"
+      [route]="navGumb.route || ''"
       [ikona]="navGumb.ikona"
       [tekst]="navGumb.tekst"/>
   </div>
