--- a/app/src/app/components/nav-gumb/nav-gumb.component.html
+++ b/app/src/app/components/nav-gumb/nav-gumb.component.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
-  <a [routerLink]="route">
+  <a (click)="onClick()" [routerLink]="route">
     <div class="col-12">
       <button mat-fab [style]="style" color="primary">
         <mat-icon>{{ikona}}</mat-icon>
