Trying to setup stuff.

--- a/app/src/app/routes/public/prijava/public-prijava.component.html
+++ b/app/src/app/routes/public/prijava/public-prijava.component.html
@@ -10,6 +10,6 @@
   </div>
 
   <div class="col-12">
-    <button color="primary" [disabled]="loading" (click)="login()" mat-raised-button class="w-100">Pošlji</button>
+    <button color="primary" [disabled]="loading" (click)="prijava()" mat-raised-button class="w-100">Prijava</button>
   </div>
 </div>
