--- a/app/src/app/components/loading/loading.component.html
+++ b/app/src/app/components/loading/loading.component.html
@@ -1,1 +1,1 @@
-<mat-progress-bar [ngClass]="{'invisible': !loading}" [mode]="loading ? 'indeterminate' : 'determinate'"/>
+<mat-progress-bar [value]="value" [ngClass]="{'invisible': !loading}" [mode]="value < 0 ? 'indeterminate' : 'determinate'"/>
