--- a/app/src/app/routes/public/kontakt/public-kontakt.component.html
+++ b/app/src/app/routes/public/kontakt/public-kontakt.component.html
@@ -13,7 +13,7 @@
 
     <div class="col-12">
       <app-input-msg/>
-      <button [disabled]="loading" mat-raised-button (click)="poslji()" color="primary" class="w-100">Pošlji</button>
+      <button [disabled]="loading" mat-raised-button type="submit" color="primary" class="w-100">Pošlji</button>
     </div>
   </div>
 </form>
