--- a/app/src/app/routes/ucenec/test/ucenec-test.component.html
+++ b/app/src/app/routes/ucenec/test/ucenec-test.component.html
@@ -11,13 +11,13 @@
   <mat-divider/>
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-sm-6">
       <ngx-charts-pie-chart
         [scheme]="opravljeno_barve"
         [labels]="true"
         [results]="opravljeno"/>
     </div>
-    <div class="col-6">
+    <div class="col-sm-6">
       <ngx-charts-pie-chart
         [scheme]="statistika_barve"
         [labels]="true"
