--- a/app/src/app/components/table-testi/table-testi.component.html
+++ b/app/src/app/components/table-testi/table-testi.component.html
@@ -1,28 +1,43 @@
-<table mat-table [dataSource]="testi">
+<div>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="naslov">
-    <th mat-header-cell *matHeaderCellDef> Naslov</th>
-    <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.naslov}} </td>
-  </ng-container>
+  <mat-form-field class="w-100">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyTestFilter($event)">
+  </mat-form-field>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="opravljeno">
-    <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
-    <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.opravljeno | percent}} </td>
-  </ng-container>
+  <table mat-table [dataSource]="testi"  mat-table matSort multiTemplateDataRows>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef> Deadline</th>
-    <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.datum | date}} </td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="naslov">
+      <th mat-header-cell *matHeaderCellDef> Naslov</th>
+      <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.naslov}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="oddaljenost">
-    <th mat-header-cell *matHeaderCellDef> Ostalo</th>
-    <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}">{{test.datum | DateOddaljenost}}</td>
-  </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="opravljeno">
+      <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
+      <td mat-cell *matCellDef="let test"
+          class="{{test.datum | DateOddaljenostClass}}"> {{test.opravljeno | percent}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr class="{{test.datum | DateOddaljenostClass}} cursor-pointer" mat-row *matRowDef="let test; columns: displayedColumns;" routerLink="{{test.link}}"></tr>
-</table>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="datum">
+      <th mat-header-cell *matHeaderCellDef> Deadline</th>
+      <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.datum | date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="oddaljenost">
+      <th mat-header-cell *matHeaderCellDef> Ostalo</th>
+      <td mat-cell *matCellDef="let test"
+          class="{{test.datum | DateOddaljenostClass}}">{{test.datum | DateOddaljenost}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr class="{{test.datum | DateOddaljenostClass}} cursor-pointer" mat-row
+        *matRowDef="let test; columns: displayedColumns;" routerLink="{{test.link}}"></tr>
+  </table>
+  <mat-divider/>
+
+  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons/>
+
+</div>
