Setting page for creating testi.

--- a/app/src/app/components/table-osebe/table-osebe.component.html
+++ b/app/src/app/components/table-osebe/table-osebe.component.html
@@ -30,4 +30,8 @@
         routerLink="{{oseba.link}}"></tr>
   </table>
 
+  <mat-divider/>
+
+  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons/>
+
 </div>
