--- a/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
+++ b/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
@@ -4,7 +4,9 @@
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>Zvezki</ng-template>
 
-      <h1>Tu so zvezki</h1>
+      <h1 *ngFor="let zvezek of zvezki">
+        {{zvezek.naslov}}:  {{zvezek.tematike.length}} tematik
+      </h1>
 
     </form>
   </mat-step>
