--- a/app/src/app/components/table-osebe/table-osebe.component.html
+++ b/app/src/app/components/table-osebe/table-osebe.component.html
@@ -2,7 +2,7 @@
 
   <mat-form-field class="w-100">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyOsebaFilter($event)">
+    <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
 
   <table mat-table [dataSource]="osebe"  mat-table matSort multiTemplateDataRows>
