--- a/app/src/app/components/table-testi/table-testi.component.html
+++ b/app/src/app/components/table-testi/table-testi.component.html
@@ -2,7 +2,7 @@
 
   <mat-form-field class="w-100">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyTestFilter($event)">
+    <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
 
   <table mat-table [dataSource]="testi"  mat-table matSort multiTemplateDataRows>
