--- a/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
+++ b/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
@@ -17,7 +17,7 @@
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>Naloge</ng-template>
-      <app-table-naloge [naloge]="naloge"/>
+      <app-table-naloge/>
     </form>
   </mat-step>
 
