--- a/app/src/app/components/table-zvezki/table-zvezki.component.html
+++ b/app/src/app/components/table-zvezki/table-zvezki.component.html
@@ -5,30 +5,14 @@
 
 <table [dataSource]="zvezki" mat-table matSort multiTemplateDataRows>
 
-  <ng-container matColumnDef="smer">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by smer">Smer</th>
-    <td mat-cell *matCellDef="let zvezek"> {{zvezek.smer}} </td>
+  <ng-container matColumnDef="tip">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by tip">Tip</th>
+    <td mat-cell *matCellDef="let zvezek"> {{zvezek.tip}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Datum</th>
-    <td mat-cell *matCellDef="let zvezek"> {{zvezek.datum | date}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="pred">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Pred</th>
-    <td mat-cell *matCellDef="let zvezek"> {{zvezek.datum | DateOddaljenost}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="posiljatelj">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by posiljatelj"> Posiljatelj
-    </th>
-    <td mat-cell *matCellDef="let zvezek"> {{zvezek.posiljatelj.ime}} {{zvezek.posiljatelj.priimek}}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="prejemnik">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by prejemnik"> Prejemnik</th>
-    <td mat-cell *matCellDef="let zvezek"> {{zvezek.prejemnik.ime}} {{zvezek.prejemnik.priimek}}</td>
+  <ng-container matColumnDef="naslov">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by naslov"> Naslov</th>
+    <td mat-cell *matCellDef="let zvezek"> {{zvezek.naslov}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
