--- a/app/src/app/components/table-naloge/table-naloge.component.html
+++ b/app/src/app/components/table-naloge/table-naloge.component.html
@@ -5,34 +5,13 @@
 
 <table [dataSource]="naloge" mat-table matSort multiTemplateDataRows>
 
-  <ng-container matColumnDef="smer">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by smer">Smer</th>
-    <td mat-cell *matCellDef="let naloga"> {{naloga.smer}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Datum</th>
-    <td mat-cell *matCellDef="let naloga"> {{naloga.datum | date}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="pred">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Pred</th>
-    <td mat-cell *matCellDef="let naloga"> {{naloga.datum | DateOddaljenost}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="posiljatelj">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by posiljatelj"> Posiljatelj
-    </th>
-    <td mat-cell *matCellDef="let naloga"> {{naloga.posiljatelj.ime}} {{naloga.posiljatelj.priimek}}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="prejemnik">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by prejemnik"> Prejemnik</th>
-    <td mat-cell *matCellDef="let naloga"> {{naloga.prejemnik.ime}} {{naloga.prejemnik.priimek}}</td>
+  <ng-container matColumnDef="naslov">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by naslov"> Naslov</th>
+    <td mat-cell *matCellDef="let naloga"> {{naloga.vsebina}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let naloga; columns: displayedColumns;"></tr>
+  <tr mat-row [ngClass]="{primary: naloga.izbran}" *matRowDef="let naloga; columns: displayedColumns;" (click)="izberi(naloga)"></tr>
 
 </table>
 
