--- a/app/src/app/components/table-tematike/table-tematike.component.html
+++ b/app/src/app/components/table-tematike/table-tematike.component.html
@@ -5,34 +5,13 @@
 
 <table [dataSource]="tematike" mat-table matSort multiTemplateDataRows>
 
-  <ng-container matColumnDef="smer">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by smer">Smer</th>
-    <td mat-cell *matCellDef="let tematika"> {{tematika.smer}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="datum">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Datum</th>
-    <td mat-cell *matCellDef="let tematika"> {{tematika.datum | date}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="pred">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Pred</th>
-    <td mat-cell *matCellDef="let tematika"> {{tematika.datum | DateOddaljenost}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="posiljatelj">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by posiljatelj"> Posiljatelj
-    </th>
-    <td mat-cell *matCellDef="let tematika"> {{tematika.posiljatelj.ime}} {{tematika.posiljatelj.priimek}}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="prejemnik">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by prejemnik"> Prejemnik</th>
-    <td mat-cell *matCellDef="let tematika"> {{tematika.prejemnik.ime}} {{tematika.prejemnik.priimek}}</td>
+  <ng-container matColumnDef="naslov">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by naslov"> Naslov</th>
+    <td mat-cell *matCellDef="let tematika"> {{tematika.naslov}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let tematika; columns: displayedColumns;"></tr>
+  <tr mat-row [ngClass]="{primary: tematika.izbran}" *matRowDef="let tematika; columns: displayedColumns;" (click)="izberi(tematika)"></tr>
 
 </table>
 
