--- a/app/src/app/components/table-zvezki/table-zvezki.component.html
+++ b/app/src/app/components/table-zvezki/table-zvezki.component.html
@@ -6,7 +6,7 @@
 <table [dataSource]="zvezki" mat-table matSort multiTemplateDataRows>
 
   <ng-container matColumnDef="tip">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by tip">Tip</th>
+    <th style="width: 0%" mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by tip">Tip</th>
     <td mat-cell *matCellDef="let zvezek"> {{zvezek.tip}} </td>
   </ng-container>
 
@@ -16,7 +16,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let zvezek; columns: displayedColumns;"></tr>
+  <tr mat-row [ngClass]="{primary: zvezek.izbran}" *matRowDef="let zvezek; columns: displayedColumns;" (click)="izberi(zvezek)"></tr>
 
 </table>
 
