--- a/app/src/styles/theme.scss
+++ b/app/src/styles/theme.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use 'sass:map';
 @include mat.core();
 
 // Define a light theme
@@ -10,6 +11,11 @@ $my-theme: mat.define-light-theme((
   ),
   density: 0,
 ));
+
+.primary {
+  background-color: #1976d2 !important;
+  color: white;
+}
 
 @include mat.core-color($my-theme);
 @include mat.all-component-themes($my-theme);
