Moving over standalone commponents.

--- a/app/src/app/ui/parts/cards/card-navigacija/card-navigacija.component.html
+++ b/app/src/app/ui/parts/cards/card-navigacija/card-navigacija.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 mt-3" style="max-width: 800px">
-      <app-nav-bar [navGumbi]="navGumbi"/>
+      <app-toolbar-navigacija [buttonToolbarModels]="buttonToolbarModels"/>
       <div class="mat-elevation-z6" style="padding: 0">
         <ng-content/>
       </div>
