--- a/app/src/app/routes/ucitelj/ucitelj.component.html
+++ b/app/src/app/routes/ucitelj/ucitelj.component.html
@@ -1,3 +1,3 @@
-<app-nav-stran [navGumbi]="navGumbi">
+<app-card-navigacija [buttonToolbarModels]="buttonToolbarModels">
   <router-outlet></router-outlet>
-</app-nav-stran>
+</app-card-navigacija>
