--- a/app/src/app/ui/parts/toolbars/toolbar-navigacija/toolbar-navigacija.component.html
+++ b/app/src/app/ui/parts/toolbars/toolbar-navigacija/toolbar-navigacija.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div *ngFor="let navGumb of navGumbi" class="col">
-    <app-nav-gumb
+  <div *ngFor="let navGumb of buttonToolbarModels" class="col">
+    <app-button-toolbar
       [onClick]="navGumb.onClick || onClick"
       [style]="navGumb.style"
       [route]="navGumb.route || ''"
