--- a/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
+++ b/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
@@ -5,36 +5,39 @@
     <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
 
-  <table mat-table [dataSource]="testi"  mat-table matSort multiTemplateDataRows>
+  <table [dataSource]="testi" mat-table matSort multiTemplateDataRows>
 
     <!-- Name Column -->
     <ng-container matColumnDef="naslov">
       <th mat-header-cell *matHeaderCellDef> Naslov</th>
-      <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.naslov}} </td>
+      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost }}"> {{test.naslov}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="opravljeno">
       <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
       <td mat-cell *matCellDef="let test"
-          class="{{test.datum | DateOddaljenostClass}}"> {{test.opravljeno | percent}} </td>
+          class="{{test.datum | date_oddaljenost_class }}"> {{test.opravljeno | percent}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="datum">
       <th mat-header-cell *matHeaderCellDef> Deadline</th>
-      <td mat-cell *matCellDef="let test" class="{{test.datum | DateOddaljenostClass}}"> {{test.datum | date}} </td>
+      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost_class }}"> {{test.datum | date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="oddaljenost">
       <th mat-header-cell *matHeaderCellDef> Ostalo</th>
       <td mat-cell *matCellDef="let test"
-          class="{{test.datum | DateOddaljenostClass}}">{{test.datum | DateOddaljenost}}</td>
+          class="{{test.datum | date_oddaljenost_class}}">{{test.datum | date_oddaljenost}}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr class="{{test.datum | DateOddaljenostClass}} cursor-pointer" mat-row
-        *matRowDef="let test; columns: displayedColumns;" routerLink="{{test.link}}"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"/>
+    <mat-row
+      class="{{test.datum | date_oddaljenost_class }} cursor-pointer"
+      *matRowDef="let test; columns: displayedColumns;"
+      [routerLink]="test.link"/>
+
   </table>
   <mat-divider/>
 
