--- a/app/src/app/ui/windows/izberi-tip-osebe/izberi-tip-osebe.component.html
+++ b/app/src/app/ui/windows/izberi-tip-osebe/izberi-tip-osebe.component.html
@@ -4,9 +4,9 @@
     <mat-divider/>
   </h1>
   <div mat-dialog-content>
-    <app-toolbar-navigacija [navGumbi]="navGumbi"/>
+    <app-toolbar-navigacija [buttonToolbarModels]="navGumbi"/>
   </div>
   <div mat-dialog-actions>
-    <button apperence="fill" [color]="data.color" class="w-100" mat-raised-button mat-dialog-close>Zapri</button>
+    <button class="w-100" mat-raised-button mat-dialog-close>Zapri</button>
   </div>
 </div>
