--- a/app/src/app/routes/ucenec/ucenec.component.html
+++ b/app/src/app/routes/ucenec/ucenec.component.html
@@ -1,3 +1,3 @@
-<app-nav-stran [navGumbi]="navGumbi">
-  <router-outlet></router-outlet>
-</app-nav-stran>
+<app-toolbar-navigacija [buttonToolbarModels]="buttonToolbarModels">
+  <router-outlet/>
+</app-toolbar-navigacija>
